--- a/build.properties
+++ b/build.properties
@@ -2,5 +2,5 @@ deploy.local.dir=/var/gworx/webapps/mapglow.org
 backup.local.dir=/Users/just/Dropbox/Backup/project/mapglow
 backup.ogg.local.dir=/Users/just/Dropbox/Shared/OpenGeoGroep/project/mapglow
 
-deploy.prod.dir=gworx@mapglow.org:/var/gworx/webapps/mapglow.org
+deploy.prod.dir=gworx@mapglow.opentraces.org:/var/gworx/webapps/mapglow.org
 
