WIP but first working versiongit add .

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     environment:
       - MS_MAPFILE=/app1/config/mapserver/app1.map
       - DEBUG=1
+      - MAPSERVER_CATCH_SEGV=1
       
     labels:
       # v2 config
